--- a/public/index.html
+++ b/public/index.html
@@ -85,17 +85,17 @@
 
   <!-- Slider Start -->
   <section id="slider"
-    style="background-image: url('https://goodit-dtsg-mmw-unibo-conferences-596f9f2c07a767cebb527b84219d7.gitlab.io/img/bremen.JPG'),url('https://goodit-dtsg-mmw-unibo-conferences-596f9f2c07a767cebb527b84219d7.gitlab.io/img/bremen.JPG');">
+    style="background-image: url('https://goodit-dtsg-mmw-unibo-conferences-596f9f2c07a767cebb527b84219d7.gitlab.io/img/bremen.jpg'),url('https://goodit-dtsg-mmw-unibo-conferences-596f9f2c07a767cebb527b84219d7.gitlab.io/img/bremen.jpg');">
     <div class="container">
       <div class="row">
         <div class="col-md-10 col-md-offset-1">
           <div class="block text-center">
-            <h1 class="animated fadeInUp text-uppercase">PACHS-GoodIT 2023</h1>
+            <h1 class="animated fadeInUp text-uppercase">DTSG-GoodIT 2024</h1>
             <p class="animated fadeInUp">ACM 4th International Conference on Information Technology for Social Good
               (GoodIT 2024)
             </p>
             <p2 class="animated fadeInUp"> 4-6 September 2024, Bremen, Germany <a class="btn btn-main btn-solid-border"
-                href="http://goodit.campusfc.unibo.it/">GoodIT2024</a>
+                href="https://blogs.uni-bremen.de/goodit2024/">GoodIT2024</a>
 
           </div>
         </div>
@@ -194,7 +194,7 @@
                 </ul>
                 <br />
               </div>
-              <a class="btn btn-outline-info btn-lg" href="http://goodit.campusfc.unibo.it/submission-of-papers/"
+              <a class="btn btn-outline-info btn-lg" href="https://blogs.uni-bremen.de/goodit2024/submission-of-papers/"
                 target="_blank">Submit a
                 Paper</a>
 
