--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                   on the well-being of individuals and communities.</p>
 
                 <p align="justify">This track aims to gather cutting-edge research that explores the use of digital twin
-                  technology to advance social goods, including but not limited to healthcare, education, environmental
+                  technology to advance social good, including but not limited to healthcare, education, environmental
                   sustainability, urban development, and disaster management. We invite submissions that examine
                   theoretical frameworks, methodological approaches, case studies, and practical applications within
                   this burgeoning field.</p>
@@ -173,7 +173,7 @@
               <div>
                 <h2>Topics of Interest</h2>
                 <p align="justify">Original submissions of research papers on a diverse range of topics are sought,
-                  particularly those identifying new research directions. The topics of the interest for the
+                  particularly those identifying new research directions. The topics of interest for the
                   conference include, but are not limited to:</p>
 
                 <ul>
@@ -182,7 +182,7 @@
                   <li>Digital twins for sustainable urban development and infrastructure management.</li>
                   <li>Leveraging digital twin technology for disaster preparedness, response, and recovery.</li>
                   <li>Digital twins to support more resilient and sustainable Industry 5.0.</li>
-                  <li>Ethical considerations and societal implications of deploying digital twins for social goods.</li>
+                  <li>Ethical considerations and societal implications of deploying digital twins for social good.</li>
                   <li>Integration of artificial intelligence, IoT, and other emerging technologies with digital twins
                     for social impact.</li>
                   <li>Case studies demonstrating successful implementation of digital twin solutions in diverse social
@@ -194,16 +194,15 @@
                 </ul>
                 <br />
               </div>
-              <a class="btn btn-outline-info btn-lg" href="https://blogs.uni-bremen.de/goodit2024/submission-of-papers/"
-                target="_blank">Submit a
-                Paper</a>
+              <a class="btn btn-outline-info btn-lg" href="https://goodit2024.hotcrp.com/"
+                target="_blank">Submit a Paper (ST_DTSG)</a>
 
               <div id="org">
                 <h2 style="margin-bottom:20px;">Organizing Committee</h2>
 
                 <h3 style="margin-bottom:20px;">Workshop chairs</h3>
                 <li>Andrea Sabbioni (University of Bologna, Italy)</li>
-                <li>Panagiotis Sarigiannidis (Thessaloniki, Greece)</li>
+                <li>Panagiotis Sarigiannidis, (University of Western Macedonia, Greece)</li>
                 <li>Armir Bujari (University of Bologna, Italy)</li>
               </div>
 
