--- a/fixed-templates/right-panel.html
+++ b/fixed-templates/right-panel.html
@@ -15,8 +15,8 @@
       <tbody>
         <tr>
           <td style="width:65%">Paper submission</td>
-          <!-- <td><del>May 17th, 2024</del> June 10th, 2023</td> -->
-          <td>May 17th, 2024</td>
+          <td><del>May 17th, 2024</del> May 31st, 2024</td> -->
+          <!-- <td>May 17th, 2024</td> -->
         </tr>
 
         <tr>
