--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
   <!-- Slider Start -->
-  <base href="https://goodit-dtsg-mmw-unibo-conferences-596f9f2c07a767cebb527b84219d7.gitlab.io/">
+  <base href="https://sabbio93.github.io/dtsg-2024/">
 
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,7 +13,7 @@
   <meta name="author" content="Andrea Sabbioni">
 
   <link rel="icon"
-    href="https://goodit-dtsg-mmw-unibo-conferences-596f9f2c07a767cebb527b84219d7.gitlab.io/img/favicon.ico">
+    href="https://sabbio93.github.io/dtsg-2024/img/favicon.ico">
 
 
   <title>DTSG GoodIT 2024</title>
@@ -22,43 +22,43 @@
 
 
   <link rel="stylesheet"
-    href="https://goodit-dtsg-mmw-unibo-conferences-596f9f2c07a767cebb527b84219d7.gitlab.io/css/owl.carousel.css" />
+    href="https://sabbio93.github.io/dtsg-2024/css/owl.carousel.css" />
   <link rel="stylesheet"
-    href="https://goodit-dtsg-mmw-unibo-conferences-596f9f2c07a767cebb527b84219d7.gitlab.io/css/bootstrap.min.css" />
+    href="https://sabbio93.github.io/dtsg-2024/css/bootstrap.min.css" />
   <link rel="stylesheet"
-    href="https://goodit-dtsg-mmw-unibo-conferences-596f9f2c07a767cebb527b84219d7.gitlab.io/css/font-awesome.min.css" />
+    href="https://sabbio93.github.io/dtsg-2024/css/font-awesome.min.css" />
   <link rel="stylesheet"
-    href="https://goodit-dtsg-mmw-unibo-conferences-596f9f2c07a767cebb527b84219d7.gitlab.io/css/ionicons.min.css" />
+    href="https://sabbio93.github.io/dtsg-2024/css/ionicons.min.css" />
   <link rel="stylesheet"
-    href="https://goodit-dtsg-mmw-unibo-conferences-596f9f2c07a767cebb527b84219d7.gitlab.io/css/animate.css" />
+    href="https://sabbio93.github.io/dtsg-2024/css/animate.css" />
   <link rel="stylesheet"
-    href="https://goodit-dtsg-mmw-unibo-conferences-596f9f2c07a767cebb527b84219d7.gitlab.io/css/syntax.css" />
+    href="https://sabbio93.github.io/dtsg-2024/css/syntax.css" />
   <link rel="stylesheet"
-    href="https://goodit-dtsg-mmw-unibo-conferences-596f9f2c07a767cebb527b84219d7.gitlab.io/css/venobox.css" />
+    href="https://sabbio93.github.io/dtsg-2024/css/venobox.css" />
   <!-- Main Stylesheet -->
 
   <link rel="stylesheet"
-    href="https://goodit-dtsg-mmw-unibo-conferences-596f9f2c07a767cebb527b84219d7.gitlab.io/css/style.min.css"
+    href="https://sabbio93.github.io/dtsg-2024/css/style.min.css"
     integrity="" media="screen">
 
   <script
-    src="https://goodit-dtsg-mmw-unibo-conferences-596f9f2c07a767cebb527b84219d7.gitlab.io/js/jquery-1.10.2.min.js"></script>
+    src="https://sabbio93.github.io/dtsg-2024/js/jquery-1.10.2.min.js"></script>
   <script
-    src="https://goodit-dtsg-mmw-unibo-conferences-596f9f2c07a767cebb527b84219d7.gitlab.io/js/bootstrap.min.js"></script>
+    src="https://sabbio93.github.io/dtsg-2024/js/bootstrap.min.js"></script>
   <script
-    src="https://goodit-dtsg-mmw-unibo-conferences-596f9f2c07a767cebb527b84219d7.gitlab.io/js/owl.carousel.min.js"></script>
+    src="https://sabbio93.github.io/dtsg-2024/js/owl.carousel.min.js"></script>
   <script
-    src="https://goodit-dtsg-mmw-unibo-conferences-596f9f2c07a767cebb527b84219d7.gitlab.io/js/plugins.js"></script>
+    src="https://sabbio93.github.io/dtsg-2024/js/plugins.js"></script>
   <script
-    src="https://goodit-dtsg-mmw-unibo-conferences-596f9f2c07a767cebb527b84219d7.gitlab.io/js/venobox.min.js"></script>
+    src="https://sabbio93.github.io/dtsg-2024/js/venobox.min.js"></script>
   <script
-    src="https://goodit-dtsg-mmw-unibo-conferences-596f9f2c07a767cebb527b84219d7.gitlab.io/js/w3-include-html.js"></script>
+    src="https://sabbio93.github.io/dtsg-2024/js/w3-include-html.js"></script>
 
 
   <!-- Main Script -->
 
   <script
-    src="https://goodit-dtsg-mmw-unibo-conferences-596f9f2c07a767cebb527b84219d7.gitlab.io/js/main.min.js"></script>
+    src="https://sabbio93.github.io/dtsg-2024/js/main.min.js"></script>
 
   <!-- google analitycs -->
   <script>
@@ -85,7 +85,7 @@
 
   <!-- Slider Start -->
   <section id="slider"
-    style="background-image: url('https://goodit-dtsg-mmw-unibo-conferences-596f9f2c07a767cebb527b84219d7.gitlab.io/img/bremen.jpg'),url('https://goodit-dtsg-mmw-unibo-conferences-596f9f2c07a767cebb527b84219d7.gitlab.io/img/bremen.jpg');">
+    style="background-image: url('https://sabbio93.github.io/dtsg-2024/img/bremen.jpg'),url('https://sabbio93.github.io/dtsg-2024/img/bremen.jpg');">
     <div class="container">
       <div class="row">
         <div class="col-md-10 col-md-offset-1">
@@ -214,7 +214,7 @@
 
         <div class="col-md-3 col-sm-12">
           <div
-            w3-include-html="https://goodit-dtsg-mmw-unibo-conferences-596f9f2c07a767cebb527b84219d7.gitlab.io/fixed-templates/right-panel.html">
+            w3-include-html="https://sabbio93.github.io/dtsg-2024/fixed-templates/right-panel.html">
           </div>
         </div>
 
@@ -222,9 +222,9 @@
   </section>
 
   <footer>
-    <img src="https://goodit-dtsg-mmw-unibo-conferences-596f9f2c07a767cebb527b84219d7.gitlab.io/img/finanziamentoUE.png"
+    <img src="https://sabbio93.github.io/dtsg-2024/img/finanziamentoUE.png"
       width="500">
-    <img src="https://goodit-dtsg-mmw-unibo-conferences-596f9f2c07a767cebb527b84219d7.gitlab.io/img/SoBigData.png"
+    <img src="https://sabbio93.github.io/dtsg-2024/img/SoBigData.png"
       width="500">
   </footer>
 
